ie button spacing fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,12 +57,14 @@ html, body {
                 text-align:center;
                 display:inline-block;
                 background:#d94040;
-                padding:0.5em 1em;
+                padding:0.5em 0;
+                width:8rem;
                 font-size: 1.125em;
                 border:2px solid #fff;
                 line-height: 1;
                 position:absolute;
-                bottom:0.5em;
+                bottom:0.5em; left:50%;
+                margin-left:-4.125rem;
                 -webkit-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.48);
                 box-shadow: 0 2px 3px 0 rgba(0,0,0,0.48);
             }
